force-app/main/default/objects/Ride__c/Ride__c.object-meta.xml
<CustomObject>
    <label>Ride</label>
    <nameField>
        <displayFormat>BID{0000}{DD}{MM}{YY}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>