force-app/main/default/objects/Ride__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>Distance__c * 7 + 25 +   IF( ISPICKVAL( Vehicle_Type__c , &apos;Car&apos;) , 100, IF(ISPICKVAL( Vehicle_Type__c , &apos;Auto&apos;) , 50, IF(ISPICKVAL( Vehicle_Type__c , &apos;Bike&apos;) , 25, 25)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>