force-app/main/default/objects/Ride__c/fields/Drop__c.field-meta.xml
<CustomField>
    <fullName>Drop__c</fullName>
    <label>Drop</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>