force-app/main/default/objects/Ride__c/fields/Pick_Up__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up__c</fullName>
    <label>Pick Up</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>