force-app/main/default/objects/Ride__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bike</fullName>
                <default>true</default>
                <label>Bike</label>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>