force-app/main/default/objects/Ride__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distance__c</columns>
    <columns>Driver__c</columns>
    <columns>Pick_Up__c</columns>
    <columns>Drop__c</columns>
    <columns>Vehicle_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>